chore: add @antfu/eslint-config and fix lint errors
- Add @antfu/eslint-config as root eslint configuration
- Add @nuxt/eslint module for Nuxt integration
- Fix lint errors across all packages (notion-vue, notion-nuxt-layer, docs)
- Add rule override for process.env usage in server files
- Update tsconfig and eslint configs for consistent formatting

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ref/vue-notion"]
 	path = ref/vue-notion
 	url = https://github.com/janniks/vue-notion
+[submodule "ref/docus"]
+	path = ref/docus
+	url = https://github.com/nuxt-content/docus
