--- a/packages/notion-vue/package.json
+++ b/packages/notion-vue/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@pleaseai/notion-vue",
+  "type": "module",
   "version": "0.1.0",
   "description": "Vue 3 Notion renderer component library",
-  "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -13,6 +10,9 @@
     },
     "./styles.css": "./src/styles.css"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "src/styles.css"
@@ -21,7 +21,9 @@
     "build": "vite build",
     "dev": "vite build --watch",
     "type-check": "vue-tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "peerDependencies": {
     "vue": "^3.5.0"
@@ -32,10 +34,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "typescript": "^5.7.2",
     "vite": "^6.0.4",
     "vite-plugin-dts": "^4.3.0",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.0",
-    "typescript": "^5.7.2"
+    "vue-tsc": "^2.2.0"
   }
 }
