--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@pleaseai/nuxt-notion-docs",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -10,17 +10,19 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "type-check": "nuxt typecheck",
+    "clean": "rm -rf .nuxt .output dist",
     "lint": "eslint .",
-    "clean": "rm -rf .nuxt .output dist"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "1.12.1",
     "@pleaseai/notion-nuxt-layer": "workspace:*",
+    "eslint": "^9.0.0",
     "nuxt": "^3.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.7.4",
     "typescript": "^5.7.2"
   }
 }
