--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
-    "build": "nuxt build",
-    "generate": "nuxt generate",
+    "dev": "nuxt dev --extends @pleaseai/notion-nuxt-layer",
+    "build": "nuxt build --extends @pleaseai/notion-nuxt-layer",
+    "generate": "nuxt generate --extends @pleaseai/notion-nuxt-layer",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "type-check": "nuxt typecheck",
@@ -17,12 +17,12 @@
   "dependencies": {
     "@nuxt/eslint": "1.12.1",
     "@pleaseai/notion-nuxt-layer": "workspace:*",
-    "eslint": "^9.0.0",
     "nuxt": "^3.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "eslint": "^9.0.0"
   }
 }
