--- a/packages/notion-nuxt-layer/package.json
+++ b/packages/notion-nuxt-layer/package.json
@@ -13,7 +13,8 @@
     "nuxt": "^3.15.0 || ^4.0.0"
   },
   "dependencies": {
-    "@nuxt/eslint": "1.12.1",
+    "@nuxt/eslint": "^1.10.0",
+    "@nuxt/eslint-config": "^1.10.0",
     "@nuxt/kit": "^3.20.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@pleaseai/notion-vue": "workspace:*",
