feat: implement high priority features
Implement 7 high priority features from implementation status:

Layout Components:
- NotionHeader.vue: Navigation with breadcrumbs, theme toggle, search
- NotionFooter.vue: Social links, copyright, theme toggle
- SearchDialog.vue: Full-text search with keyboard shortcuts (⌘K)
- default.vue layout: Header + Content + Footer structure

Error Handling:
- 404.vue: Not found page
- error.vue: Generic error page with status codes

Code Enhancement:
- NotionCode.vue: Syntax highlighting with Shiki
- Integrated into NotionBlock for code blocks

SEO:
- useNotionSeo.ts: Comprehensive meta tags (OG, Twitter, JSON-LD)

Dependencies:
- @nuxt/icon for icon components (auto-imported)
- shiki for syntax highlighting

Closes #3, #4, #5, #6, #7, #8, #9

--- a/packages/notion-nuxt-layer/package.json
+++ b/packages/notion-nuxt-layer/package.json
@@ -22,5 +22,8 @@
     "notion-client": "^7.1.4",
     "notion-types": "^7.1.4",
     "notion-utils": "^7.1.4"
+  },
+  "devDependencies": {
+    "@nuxt/icon": "^2.1.1"
   }
 }
