--- a/packages/notion-vue/package.json
+++ b/packages/notion-vue/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "notion-types": "^7.1.4",
-    "notion-utils": "^7.1.4"
+    "notion-utils": "^7.1.4",
+    "shiki": "^3.20.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
