--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
     "eslint": "^9.28.0",
+    "nuxt": "^4",
     "turbo": "^2.5.0",
     "typescript": "^5.7.2"
   }
