--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,14 +15,14 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@nuxt/eslint": "1.12.1",
+    "@nuxt/eslint": "catalog:",
     "@pleaseai/notion-nuxt-layer": "workspace:*",
-    "nuxt": "^3.15.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "nuxt": "catalog:",
+    "vue": "catalog:",
+    "vue-router": "catalog:"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
-    "eslint": "^9.0.0"
+    "typescript": "catalog:",
+    "eslint": "catalog:"
   }
 }
