--- a/package.json
+++ b/package.json
@@ -11,6 +11,28 @@
     "packages/*",
     "apps/*"
   ],
+  "catalog": {
+    "@antfu/eslint-config": "^6.0.0",
+    "nuxt": "^4.0.0",
+    "turbo": "^2.6.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "typescript": "^5.9.3",
+    "eslint": "^9.39.2",
+    "@nuxt/eslint": "^1.12.1",
+    "@nuxt/eslint-config": "^1.12.1",
+    "@nuxt/kit": "^4.0.0",
+    "@nuxt/icon": "^2.1.1",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "notion-client": "^7.1.4",
+    "notion-types": "^7.1.4",
+    "notion-utils": "^7.1.4",
+    "shiki": "^3.20.0",
+    "vite": "^6.0.4",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "vite-plugin-dts": "^4.3.0",
+    "vue-tsc": "^2.2.0"
+  },
   "scripts": {
     "dev": "turbo dev --filter=@pleaseai/nuxt-notion-docs",
     "build": "turbo build",
@@ -23,10 +45,10 @@
     "clean": "turbo clean"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.11.0",
-    "eslint": "^9.28.0",
-    "nuxt": "^4",
-    "turbo": "^2.5.0",
-    "typescript": "^5.7.2"
+    "@antfu/eslint-config": "catalog:",
+    "eslint": "catalog:",
+    "nuxt": "catalog:",
+    "turbo": "catalog:",
+    "typescript": "catalog:"
   }
 }
