--- a/packages/notion-vue/package.json
+++ b/packages/notion-vue/package.json
@@ -29,16 +29,16 @@
     "vue": "^3.5.0"
   },
   "dependencies": {
-    "notion-types": "^7.1.4",
-    "notion-utils": "^7.1.4",
-    "shiki": "^3.20.0"
+    "notion-types": "catalog:",
+    "notion-utils": "catalog:",
+    "shiki": "catalog:"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.4",
-    "vite-plugin-dts": "^4.3.0",
-    "vue": "^3.5.13",
-    "vue-tsc": "^2.2.0"
+    "@vitejs/plugin-vue": "catalog:",
+    "typescript": "catalog:",
+    "vite": "catalog:",
+    "vite-plugin-dts": "catalog:",
+    "vue": "catalog:",
+    "vue-tsc": "catalog:"
   }
 }
