--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "vite": "^6.0.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite-plugin-dts": "^4.3.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/svg-spinners": "^1.2.4"
   },
   "scripts": {
     "dev": "turbo dev --filter=@pleaseai/nuxt-notion-docs",
@@ -46,6 +49,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
+    "@iconify-json/mdi": "catalog:",
+    "@iconify-json/ph": "catalog:",
+    "@iconify-json/svg-spinners": "catalog:",
     "eslint": "catalog:",
     "nuxt": "catalog:",
     "turbo": "catalog:",
