--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxt/eslint-config": "^1.12.1",
     "@nuxt/kit": "^4.0.0",
     "@nuxt/icon": "^2.1.1",
+    "@nuxt/image": "^1.9.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "notion-client": "^7.1.4",
     "notion-types": "^7.1.4",
