--- a/packages/notion-nuxt-layer/package.json
+++ b/packages/notion-nuxt-layer/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/eslint": "catalog:",
     "@nuxt/eslint-config": "catalog:",
+    "@nuxt/image": "catalog:",
     "@nuxt/kit": "catalog:",
     "@nuxtjs/color-mode": "catalog:",
     "@pleaseai/notion-vue": "workspace:*",
