fix(build): ensure .nuxt directory exists before build on Vercel
Add nuxt prepare scripts to notion-nuxt-layer package and update turbo
pipeline to run prepare task before build. This fixes the TSConfck error
that occurs when the layer's tsconfig.json cannot resolve the .nuxt
directory during Vercel deployment.

--- a/packages/notion-nuxt-layer/package.json
+++ b/packages/notion-nuxt-layer/package.json
@@ -9,6 +9,10 @@
     "nuxt.config.ts",
     "server"
   ],
+  "scripts": {
+    "prepare": "nuxt prepare",
+    "postinstall": "nuxt prepare"
+  },
   "peerDependencies": {
     "nuxt": "^3.15.0 || ^4.0.0"
   },
